welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: unbound placeholder parameter
	case  ""  => _
                     ^